[workspace]
members  = ["prometheus-parser"]
resolver = "2"

[workspace.dependencies]
bytes    = "1"
indexmap = "2.4.0"
nom      = "7.1.3"
num_enum = "0.7.3"

protobuf = { git = "https://github.com/bitdriftlabs/rust-protobuf.git", branch = "patch-stack", features = [
  "bytes",
  "with-bytes",
] }
protobuf-codegen = { git = "https://github.com/bitdriftlabs/rust-protobuf.git", branch = "patch-stack" }

snafu = { version = "0.8" }
